feat:新增设置页面的服务连接子页，完成配置保存功能

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miramate-v2-client",
   "version": "0.0.0",
-  "main": "dist-electron/main.js",
+  "main": "dist-electron/main.mjs",
   "private": true,
   "type": "module",
   "engines": {
